--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -67,7 +67,7 @@
         };
 
             <tr>
-                <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                <td>@position.LevelCode</td>
                 <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
                 <td><a asp-page="SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
             </tr>
