--- a/Web/Pages/Student/HighSchool/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Computer.cshtml
@@ -36,7 +36,7 @@
                  };
 
                     <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@position.LevelCode</td>
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
                         <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
@@ -80,7 +80,7 @@
                         space = " - ";
                     }
                     <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@position.LevelCode</td>
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a target="_blank" href=@pdapUrl>@pdapText</a></td>
                         <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
