level code updates

--- a/Admin/Pages/Positions/Details.cshtml
+++ b/Admin/Pages/Positions/Details.cshtml
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    @Model.Position.JobGroupTitleEng (@Model.Position.JobGroupCode) Level @Model.Position.JobGroupLevelValue / @Model.Position.JobGroupTitleFre (@Model.Position.JobGroupCode) Niveau @Model.Position.JobGroupLevelValue
+                    @Model.Position.JobGroupTitleEng Level (@Model.Position.LevelCode) / @Model.Position.JobGroupTitleFre Niveau (@Model.Position.LevelCode)
                 </td>
             </tr>
             <tr>
