--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -493,7 +493,7 @@ else if (Model.PercentSelected == "true")
         };
 
             <tr>
-                <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                <td>@position.LevelCode</td>
                 <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
                 <td><a asp-page="SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
             </tr>
