--- a/Web/Views/ToPdf/GetPositionDetailsAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetPositionDetailsAsPdf.cshtml
@@ -34,7 +34,7 @@
     <h3 class="text-center">@h2Results</h3>
 
     <table class="table table-hover table-bordered mrgn-tp-lg" width="100%" border="0" cellspacing="0" cellpadding="0">
-        <caption><h4>@positiondetails: @Position.JobGroupCode-@Position.JobGroupLevelValue @(isEnglish ? Position.JobTitleEng : Position.JobTitleFre)</h4></caption>
+        <caption><h4>@positiondetails: @Position.JobGroupLevelCode @(isEnglish ? Position.JobTitleEng : Position.JobTitleFre)</h4></caption>
         <tbody>
             <tr>
                 <th style="background-color:#f2f2f2" colspan="2">@certifications</th>
