--- a/Web/Views/ToPdf/GetSimilarPositionsAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetSimilarPositionsAsPdf.cshtml
@@ -24,7 +24,7 @@
             @foreach (var position in Positions.Where(e => e.Active != 0))
             {
                     <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@position.LevelCode</td>
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
 
                     </tr>
