--- a/Admin/Pages/Competencies/Delete.cshtml
+++ b/Admin/Pages/Competencies/Delete.cshtml
@@ -42,7 +42,7 @@
     <form method="post">
         <input type="hidden" asp-for="Competency.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="List" asp-route-typeid="@Model.Competency.TypeId">Back to List</a>
     </form>
 </div>
 
