--- a/Admin/Pages/Competencies/Edit.cshtml
+++ b/Admin/Pages/Competencies/Edit.cshtml
@@ -107,7 +107,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="List" asp-route-typeid="@Model.Competency.TypeId">Back to List</a>
 </div>
 
 @section Scripts {
