--- a/Admin/Pages/Competencies/Index.cshtml
+++ b/Admin/Pages/Competencies/Index.cshtml
@@ -4,7 +4,13 @@
     ViewData["Title"] = "Competencies";
 }
 
-
+    <form asp-page="./Index" method="get">
+        <div class="form-actions no-color">
+            <h6>
+                <a asp-page="../Index">Back to Full List</a>
+            </h6>
+        </div>
+    </form>
 <div class="container">
     <div class="row align-items-center">
         <div class="col-sm py-3">
