--- a/Admin/Pages/Certificates/Descriptions/Index.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Index.cshtml
@@ -16,7 +16,7 @@
             Find certificate descriptions:
             <input type="text" asp-for="@Model.Filter" />
             <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="../Index">Back to Full List</a>
+            <a asp-page="./Index">Back to Full List</a>
         </h6>
     </div>
 </form>
