--- a/Admin/Pages/Certificates/Index.cshtml
+++ b/Admin/Pages/Certificates/Index.cshtml
@@ -18,7 +18,7 @@
             Find certificates:
             <input type="text" asp-for="@Model.Filter" />
             <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="../Index">Back to Full List</a>
+            <a asp-page="./Index">Back to Full List</a>
         </h6>
     </div>
 </form>
