--- a/Admin/Pages/Positions/Index.cshtml
+++ b/Admin/Pages/Positions/Index.cshtml
@@ -14,7 +14,7 @@
             Find similar positions:
             <input type="text" asp-for="@Model.Filter" />
             <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="../Index">Back to Full List</a>
+            <a asp-page="./Index">Back to Full List</a>
         </h6>
     </div>
 </form>
